--- a/style.css
+++ b/style.css
@@ -203,12 +203,12 @@ main{
     .right-side{
         display: flex;
         border-top: 1px solid var(--Dark-Grayish-Cyan);
-        padding: 0 20px;
+        padding: 20px;
         flex-wrap: wrap;
     }
 
     .right-side > div {
-        margin: 15px 10px;
+        margin: 15px 10px 5px 3px ;
     }
 
 }
